Revert "make the header fixed on mobile"
This reverts commit 313200aaeda6debf4df33a8f6cd71bae6ac18479.

--- a/style.css
+++ b/style.css
@@ -233,18 +233,12 @@ div.nice-select, .nice-select.open, .nice-select .option, .nice-select input.nic
     padding: 16px 0px;
   }
 
+  .page {
+    padding-top: 90px;
+  }
+
   .header {
     padding: 16px;
-  }
-
-  .page {
-    padding-top: 320px;
-  }
-
-  .sidebar {
-    position: fixed;
-    background: var(--bg-color);
-    top: 80px;
   }
 
   .sidebar a {
